# soft_video_show

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/mobi/vhly/demo01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/mobi/vhly/demo01/: ConverterActivity.java  HardEncodingActivity.java  MainActivity.java
app/src/main/res/layout/: activity_converter.xml  activity_hard_encoding.xml  activity_main.xml
app/src/test/java/mobi/vhly/demo01/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/cpp/libavutil/: md5test.c
ffmpeg/src/androidTest/java/mobi/vhly/ffmpeg/: ExampleInstrumentedTest.java  MyTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: config.h
ffmpeg/src/main/cpp/libavcodec/: bsf_list.c  qpel_template.c
ffmpeg/src/main/cpp/libavutil/: avconfig.h  ffversion.h
ffmpeg/src/main/cpp/libswresample/: noise_shaping_data.c
ffmpeg/src/main/java/mobi/vhly/ffmpeg/: Version.java
ffmpeg/src/main/java/mobi/vhly/ffmpeg/spec/: Chunk.java
ffmpeg/src/main/java/mobi/vhly/ffmpeg/spec/header/: BasicHeader.java
ffmpeg/src/test/java/mobi/vhly/ffmpeg/: ExampleUnitTest.java
ffmpeg/src/test/java/mobi/vhly/librtmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
librtmp/: CMakeLists.txt  build.gradle  proguard-rules.pro
librtmp/src/androidTest/java/mobi/vhly/librtmp/: ExampleInstrumentedTest.java
librtmp/src/main/: AndroidManifest.xml
librtmp/src/main/cpp/: config.h
librtmp/src/main/java/mobi/vhly/librtmp/: Version.java
librtmp/src/main/java/mobi/vhly/librtmp/spec/: Chunk.java
librtmp/src/main/java/mobi/vhly/librtmp/spec/header/: BasicHeader.java
x264/: CMakeLists.txt  build.gradle
x264/src/androidTest/java/mobi/vhly/x264/: ExampleInstrumentedTest.java
x264/src/main/: AndroidManifest.xml
x264/src/main/cpp/: mobi_vhly_demo01_MainActivity.c  mobi_vhly_demo01_MainActivity.h  mobi_vhly_demo01_X264Encoder.c  mobi_vhly_demo01_X264Encoder.h  mobi_vhly_x264_X264Encoder.c  mobi_vhly_x264_X264Encoder.h
x264/src/main/cpp/x264/: config.h  x264dll.c
x264/src/main/cpp/x264/common/: common.c  osdep.c
x264/src/main/cpp/x264/common/aarch64/: bitstream-a.S  cabac-a.S  deblock-a.S
x264/src/main/cpp/x264/common/arm/: bitstream-a.S  predict-c.c
x264/src/main/cpp/x264/common/ppc/: predict.c
x264/src/main/cpp/x264/common/x86/: predict-c.c
x264/src/main/cpp/x264/encoder/: analyse.c  analyse.h  encoder.c  me.c  slicetype-cl.c  slicetype.c
x264/src/main/cpp/x264/extras/: getopt.c
x264/src/main/cpp/x264/tools/: checkasm.c
x264/src/main/java/mobi/vhly/x264/: X264Encoder.java
x264/src/test/java/mobi/vhly/x264/: ExampleUnitTest.java
